# differential

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PR_lint_test.yaml
data/: STORAGE.md
src/newsletter_generator/ai/: AI.md  README.md  processor.py
src/newsletter_generator/ai/prompts/: __init__.py  prompt_registry.py
src/newsletter_generator/ai/prompts/categorisation/: __init__.py  v1.py  v2.py
src/newsletter_generator/ai/prompts/insights/: __init__.py  v1.py  v2.py
src/newsletter_generator/cli/: __init__.py  vector_index.py
src/newsletter_generator/ingestion/: README.md  content_fetcher.py  content_parser.py  content_processor.py  content_standardiser.py  content_standardizer.py  orchestrator.py  test_ingest.py
src/newsletter_generator/integration/: __init__.py  hooks.py  storage_vector_integration.py
src/newsletter_generator/newsletter/: __main__.py  assembler.py
src/newsletter_generator/storage/: storage_manager.py
src/newsletter_generator/utils/: __init__.py  caching.py  config.py  content_processing.py  deduplication.py  logging_utils.py  registry_manager.py
src/newsletter_generator/vector_db/: README.md  lightrag_manager.py
src/newsletter_generator/whatsapp/: README.md  WHATSAPP.md  WHATSAPP_SLASH_COMMANDS.md  webhook_errors.py  webhook_receiver.py
tests/test_ai/: test_processor.py  test_processor_imports.py  test_prompt_registry.py
tests/test_ingestion/: test_content_fetcher.py  test_content_parser.py  test_content_processor.py  test_content_standardizer.py  test_orchestrator.py
tests/test_integration/: __init__.py  test_hooks.py  test_storage_vector_integration.py
tests/test_newsletter/: test_assembler.py
tests/test_storage/: test_storage_manager.py  test_storage_manager_functional.py
tests/test_utils/: test_caching.py  test_config.py  test_logging_utils.py
tests/test_vector_db/: test_lightrag_manager.py
tests/test_whatsapp/: test_circuit_breaker.py  test_webhook_errors.py  test_webhook_receiver.py
tests/test_whatsapp/commands/: test_commands.py  test_handlers.py  test_webhook.py
(+15 files in other folders)
