[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "differential"
version = "0.1.0"
description = "Newsletter Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.3",
    "crawl4ai>=0.6.2",
    "fastapi>=0.115.12",
    "lightrag>=0.1.0b6",
    "logfire>=3.14.1",
    "ngrok>=1.4.0",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.1.9",
    "pymupdf>=1.25.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "schedule>=1.2.2",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.2",
    "youtube-transcript-api>=1.0.3",
]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter_generator"]
